<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.k11.footballplus.Views.CommentActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nuevo comentario"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/edtTitleActivityComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titleComment"/>
        <EditText
            android:id="@+id/edtDecriptionActivityComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Comment"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:lines="6"
            android:scrollHorizontally="false"/>

        <Button
            android:id="@+id/btnAddCommentActivityComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addComment"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_button_my_profile"
   />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
