<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:elevation="@dimen/cardview_default_elevation"
    android:padding="2dp"
    app:cardCornerRadius="@dimen/cardview_default_radius">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/Field"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNameFieldItemReservarion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre de la cancha"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/HourStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHourStartItemReservarion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="hora de inicio"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/DepartureTime"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHourEndItemReservarion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="hora de salida"
                android:textSize="18sp" />

        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/Date"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDateItemReservarion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha de resrvacion"
                android:textSize="18sp" />

        </LinearLayout>












        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/Addressp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAddressItemReservarion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dirección de la cancha"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/Phonep"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhoneItemReservarion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Telefono de la cancha"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRemoveItemReservarion"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="15dp"
        android:background="@drawable/delete"


        />


</android.support.v7.widget.CardView>