<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.k11.footballplus.Views.FragmentField">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imgNameFieldActivity"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:elevation="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cancha" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/imgNameFieldActivity"
            android:layout_margin="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="@string/Namep"
                        android:textColor="@android:color/black"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtNameFragmentField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="Nombre de la cancha"
                        android:textColor="@android:color/black"
                        android:textSize="24dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="@string/Descriptionp"
                        android:textColor="@android:color/black"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDescriptionFragmentField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="Descripcion"
                        android:textColor="@android:color/black"
                        android:textSize="24dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="@string/Addressp"
                        android:textColor="@android:color/black"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAddressFragmentField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="Dirección de la cancha"
                        android:textColor="@android:color/black"
                        android:textSize="24dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="@string/Phonep"
                        android:textColor="@android:color/black"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtPhoneFragmentField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:text="Nombre de la cancha"
                        android:textColor="@android:color/black"
                        android:textSize="24dp" />


                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</FrameLayout>
